# t20_prediction

./: .gitignore  README.md  pyproject.toml
data/saved_data/: batter_stats.csv  bowler_stats.csv  match_test_data.csv  standardized_per_game_data.csv
data/t20s_json/: 1459718.json  1459719.json  README.txt
notebooks/: ball_modeling.ipynb  data_investigation.ipynb  feature_extraction.ipynb  models.ipynb
simulation/: cricket_simulation.py
