[tool.poetry]
name = "coding-task"
version = "0.1.0"
description = ""
authors = ["edenlc <115804175+edenlc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
tdqm = "^0.0.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
